# main.go
@@ -7,93 +7,80 @@ import (
 	"fmt"
 	"log"
 	"net/http"
-	// Importar el paquete CORS
+	"time"
+
+	"github.com/gorilla/mux"
 )
 
 // Función para manejar la petición GET /generate-address
 func GenerateAddressHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
-	// Llamamos a la función GetAddress del paquete internal
-	address, privateKey, err := internal.GetAddress(db)
+	const initialBalance = 1000 // Define el saldo inicial predeterminado
+	address, privateKey, err := internal.GetAddress(db, initialBalance)
 	if err != nil {
 		http.Error(w, fmt.Sprintf("Error al generar la dirección: %s", err), http.StatusInternalServerError)
 		return
 	}
 
-	// Enviar la respuesta como JSON
+	privateKeyHex := hex.EncodeToString(privateKey.D.Bytes())
+
 	response := map[string]string{
 		"address":    address,
-		"privateKey": hex.EncodeToString(privateKey.D.Bytes()), // Convertir la clave privada a hexadecimal
+		"privateKey": privateKeyHex,
 	}
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(response)
 }
 
-// Función para manejar la petición GET /all-accounts
-func GetAllAccountsHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
-	// Obtener todas las cuentas de la base de datos
-	accounts, err := db.GetAllAccounts()
-	if err != nil {
-		http.Error(w, "Error al obtener las cuentas", http.StatusInternalServerError)
-		return
-	}
-
-	// Crear una lista para las cuentas y sus balances
-	var accountsWithBalance []map[string]interface{}
-
-	// Iterar sobre las cuentas y obtener su balance
-	for _, account := range accounts {
-		balance, err := db.GetBalance(account) // Obtener el balance de cada cuenta
-		if err != nil {
-			http.Error(w, fmt.Sprintf("Error obteniendo balance para %s: %s", account, err), http.StatusInternalServerError)
-			return
-		}
-
-		// Añadir la cuenta y su balance a la lista
-		accountsWithBalance = append(accountsWithBalance, map[string]interface{}{
-			"address": account,
-			"balance": balance,
-		})
-	}
-
-	// Enviar la respuesta como JSON
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(accountsWithBalance)
-}
-
 // Función para manejar la petición GET /blocks
 func GetBlocksHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
-	// Cargar todos los bloques desde la base de datos
 	blocks, err := db.LoadBlocks()
 	if err != nil {
 		http.Error(w, "Error al cargar los bloques", http.StatusInternalServerError)
 		return
 	}
 
-	// Enviar la respuesta como JSON
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(blocks)
 }
 
-// Función para manejar la petición GET /balance
-func GetBalanceHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
-	account := r.URL.Query().Get("account")
-	if account == "" {
-		http.Error(w, "Cuenta no especificada", http.StatusBadRequest)
-		return
-	}
-
-	// Obtener el saldo de la cuenta
-	balance, err := db.GetBalance(account)
+// Función para manejar la petición GET /transactions
+func GetTransactionsHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
+	transactions, err := db.LoadTransactions()
 	if err != nil {
-		http.Error(w, fmt.Sprintf("Error al obtener el saldo: %s", err), http.StatusInternalServerError)
+		http.Error(w, fmt.Sprintf("Error al cargar transacciones: %s", err), http.StatusInternalServerError)
 		return
 	}
 
-	// Enviar la respuesta como JSON
-	response := map[string]interface{}{
-		"account": account,
-		"balance": balance,
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(transactions)
+}
+
+// Función para manejar la petición GET /stats
+func GetStatsHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
+	blocks, err := db.LoadBlocks()
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error al cargar bloques: %s", err), http.StatusInternalServerError)
+		return
 	}
+
+	transactions, err := db.LoadTransactions()
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error al cargar transacciones: %s", err), http.StatusInternalServerError)
+		return
+	}
+
+	accounts, err := db.GetAllAccounts()
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error al cargar cuentas: %s", err), http.StatusInternalServerError)
+		return
+	}
+
+	response := map[string]interface{}{
+		"total_blocks":       len(blocks),
+		"total_transactions": len(transactions),
+		"total_accounts":     len(accounts),
+	}
+
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(response)
 }
@@ -106,23 +93,19 @@ func TransferHandler(w http.ResponseWriter, r *http.Request, db *internal.Databa
 		Amount int64  `json:"amount"`
 	}
 
-	// Decodificar el cuerpo de la solicitud
 	if err := json.NewDecoder(r.Body).Decode(&transferRequest); err != nil {
 		http.Error(w, fmt.Sprintf("Error al decodificar la solicitud: %s", err), http.StatusBadRequest)
 		return
 	}
 
-	// Transferir el dinero
-	timestamp := fmt.Sprintf("%d", (r.ContentLength / 1000)) // Timestamp aproximado para la transferencia
-	err := db.Transfer(transferRequest.From, transferRequest.To, transferRequest.Amount, timestamp)
+	err := db.AddPendingTransaction(transferRequest.From, transferRequest.To, transferRequest.Amount)
 	if err != nil {
-		http.Error(w, fmt.Sprintf("Error en la transferencia: %s", err), http.StatusInternalServerError)
+		http.Error(w, fmt.Sprintf("Error al agregar la transacción: %s", err), http.StatusInternalServerError)
 		return
 	}
 
-	// Responder que la transferencia fue exitosa
 	response := map[string]string{
-		"status": "transferencia exitosa",
+		"status": "Transacción añadida a la cola",
 		"from":   transferRequest.From,
 		"to":     transferRequest.To,
 		"amount": fmt.Sprintf("%d", transferRequest.Amount),
@@ -131,84 +114,134 @@ func TransferHandler(w http.ResponseWriter, r *http.Request, db *internal.Databa
 	json.NewEncoder(w).Encode(response)
 }
 
+// Función para manejar la petición GET /balance
+func GetBalanceHandler(w http.ResponseWriter, r *http.Request, db *internal.Database) {
+	account := r.URL.Query().Get("account")
+	if account == "" {
+		http.Error(w, "Cuenta no especificada", http.StatusBadRequest)
+		return
+	}
+
+	balance, err := db.GetBalance(account)
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error al obtener el saldo: %s", err), http.StatusInternalServerError)
+		return
+	}
+
+	response := map[string]interface{}{
+		"account": account,
+		"balance": balance,
+	}
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(response)
+}
+
+// Ciclo de minado automático
+func startMiningLoop(db *internal.Database, bc *internal.Blockchain) {
+	ticker := time.NewTicker(30 * time.Second)
+	defer ticker.Stop()
+
+	for {
+		<-ticker.C
+		pendingTransactions, err := db.GetPendingTransactions()
+		if err != nil {
+			fmt.Printf("Error al obtener transacciones pendientes: %s\n", err)
+			continue
+		}
+
+		if len(pendingTransactions) == 0 {
+			fmt.Println("No hay transacciones pendientes para minar.")
+			continue
+		}
+
+		newBlock := bc.AddBlock(pendingTransactions, time.Now().String())
+		fmt.Printf("Bloque %d minado con %d transacciones.\n", newBlock.Index, len(pendingTransactions))
+
+		if err := db.SaveBlock(*newBlock); err != nil {
+			fmt.Printf("Error al guardar el bloque: %s\n", err)
+			continue
+		}
+
+		for _, tx := range pendingTransactions {
+			err = db.UpdateBalances(tx.From, tx.To, tx.Amount)
+			if err != nil {
+				fmt.Printf("Error al actualizar saldo: %s\n", err)
+			}
+		}
+
+		if err := db.ClearPendingTransactions(); err != nil {
+			fmt.Printf("Error al limpiar transacciones pendientes: %s\n", err)
+		}
+	}
+}
+
 func main() {
-	// Inicializar la base de datos
-	db, err := internal.InitDB("blockchain.db")
+	db, err := internal.InitDB("postgres://postgres:170280@localhost:5432/blockchain_db")
 	if err != nil {
 		log.Fatalf("Error inicializando la base de datos: %s\n", err)
 	}
 	defer db.Connection.Close()
 
-	// Crear una nueva blockchain
-	bc := internal.NewBlockchain()
+	bc := internal.NewBlockchain("Genesis Hash or Data")
 
-	// Cargar bloques existentes desde la base de datos
 	blocks, err := db.LoadBlocks()
 	if err != nil {
 		log.Fatalf("Error cargando bloques: %s\n", err)
 	}
 
-	// Si no hay bloques, crear el bloque génesis
 	if len(blocks) == 0 {
 		fmt.Println("No se encontraron bloques, creando bloque génesis...")
-		bc.AddBlock("Bloque génesis")
-
-		// Guardar el bloque génesis
-		genesisBlock := bc.Blocks[0]
-		err := db.SaveBlock(genesisBlock)
+		bc.AddBlock([]internal.Transaction{}, "Genesis Hash")
+		err := db.SaveBlock(*bc.Blocks[0])
 		if err != nil {
 			log.Fatalf("Error guardando el bloque génesis: %s\n", err)
 		}
 		fmt.Println("Bloque génesis creado y guardado.")
 	} else {
-		// Si ya existen bloques, cargarlos en la blockchain
-		bc.Blocks = blocks
+		for _, block := range blocks {
+			bc.Blocks = append(bc.Blocks, &block)
+		}
 	}
 
-	// Agregar un nuevo bloque
-	bc.AddBlock("Nuevo bloque para probar BLAKE2")
+	go startMiningLoop(db, bc)
 
-	// Obtener el último bloque y guardarlo en la base de datos
-	newBlock := bc.Blocks[len(bc.Blocks)-1]
-	err = db.SaveBlock(newBlock)
-	if err != nil {
-		log.Fatalf("Error guardando el nuevo bloque: %s\n", err)
-	}
-	fmt.Println("Nuevo bloque agregado y guardado.")
-
-	// Manejar balances
-	tokenSupply := internal.NewTokenSupply(100_000_000, "cuenta1")
-	err = db.SaveBalance("cuenta1", tokenSupply.GetBalance("cuenta1"))
-	if err != nil {
-		log.Fatalf("Error guardando el balance inicial: %s\n", err)
-	}
-
-	// Servir swagger.json desde la carpeta docs
-	http.Handle("/swagger.json", http.StripPrefix("/", http.FileServer(http.Dir("./docs"))))
-
-	// Servir los archivos estáticos de Swagger UI desde la carpeta swagger-ui
-	http.Handle("/swagger-ui/", http.StripPrefix("/swagger-ui/", http.FileServer(http.Dir("./swagger-ui"))))
-
-	// Registrar las rutas para la blockchain
-	http.HandleFunc("/generate-address", func(w http.ResponseWriter, r *http.Request) {
+	router := mux.NewRouter()
+	router.HandleFunc("/generate-address", func(w http.ResponseWriter, r *http.Request) {
 		GenerateAddressHandler(w, r, db)
-	})
-	http.HandleFunc("/all-accounts", func(w http.ResponseWriter, r *http.Request) {
-		GetAllAccountsHandler(w, r, db)
-	})
-	http.HandleFunc("/blocks", func(w http.ResponseWriter, r *http.Request) {
+	}).Methods("GET")
+	router.HandleFunc("/blocks", func(w http.ResponseWriter, r *http.Request) {
 		GetBlocksHandler(w, r, db)
-	})
-	http.HandleFunc("/balance", func(w http.ResponseWriter, r *http.Request) {
-		GetBalanceHandler(w, r, db)
-	})
-	http.HandleFunc("/transfer", func(w http.ResponseWriter, r *http.Request) {
+	}).Methods("GET")
+	router.HandleFunc("/transactions", func(w http.ResponseWriter, r *http.Request) {
+		GetTransactionsHandler(w, r, db)
+	}).Methods("GET")
+	router.HandleFunc("/transfer", func(w http.ResponseWriter, r *http.Request) {
 		TransferHandler(w, r, db)
+	}).Methods("POST")
+	router.HandleFunc("/balance", func(w http.ResponseWriter, r *http.Request) {
+		GetBalanceHandler(w, r, db)
+	}).Methods("GET")
+	router.HandleFunc("/stats", func(w http.ResponseWriter, r *http.Request) {
+		GetStatsHandler(w, r, db)
+	}).Methods("GET")
+
+	// Rutas relacionadas con Swagger
+	router.HandleFunc("/swagger.json", func(w http.ResponseWriter, r *http.Request) {
+		http.ServeFile(w, r, "/home/tuxz/blockchain-go/docs/swagger.json")
+	}).Methods("GET")
+	swaggerUIDir := http.Dir("/home/tuxz/blockchain-go/swagger-ui")
+	router.PathPrefix("/swagger/").Handler(http.StripPrefix("/swagger/", http.FileServer(swaggerUIDir)))
+
+	// Listar todas las rutas registradas
+	router.Walk(func(route *mux.Route, router *mux.Router, ancestors []*mux.Route) error {
+		path, _ := route.GetPathTemplate()
+		methods, _ := route.GetMethods()
+		fmt.Printf("Ruta registrada: %s, Métodos: %v\n", path, methods)
+		return nil
 	})
 
-	// Iniciar el servidor estándar de Go en el puerto 8080
 	fmt.Println("Servidor escuchando en el puerto 8080...")
-	err = http.ListenAndServe(":8080", nil)
+	err = http.ListenAndServe(":8080", router)
 	if err != nil {
 		log.Fatalf("Error iniciando el servidor: %s\n", err)
 	}
